--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -10,39 +10,34 @@
 }
 
 .landing-header {
-    background-color: #ffffff;
     font-size: 1.4em;
-}
-
-.landing-link {
-    color: #09d3ac;
-}
-
-.splash {
     background-image: url(/splash_search.jpg);
-    background-size: 110em;
+    background-size: 150rem;
+
     width: 100%;
-    height: 25em;
+    height: 40rem;
+
     display: flex;
     flex-direction: column;
-    align-items: center;;
+    align-items: center;
+    justify-content: center;
 }
 
-.splash > h1 {
-    color: rgb(255, 255, 255);
+.landing-header > h1 {
+    color: var(--text-light);
     font-size: 3.6em;
     text-shadow: 0px 0px 3px white;
     -webkit-text-fill-color: rgb(255, 255, 255); /* Will override color (regardless of order) */
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: rgb(255, 255, 255);
-    padding: 50px;
-    text-align: center;
+
+    padding-bottom: 4rem;
 }
 
-.splash input {
+.landing-header input {
     width: 300px;
     height: 50px;
-    background-color: white;
+    background-color: var(--text-light);
     border-radius: 3px 0 0 3px;
     border: none;
     font-size: 1em;
@@ -54,10 +49,6 @@
     width: 50px;
     border: none;
     font-size: 1em;
-}
-.splash-logo {
-    align-self: flex-start;
-    width: 48px;
-    height: 48px;
-    margin: 20px;
+    background-color: var(--primary-lighter);
+    color: var(--text-light);
 }
